# space-arcade

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: components.hpp  entity.cpp  entity.hpp  game_loop.cpp  game_loop.hpp  game_state.hpp  grid.cpp  grid.hpp  main.cpp  numkeys.hpp  random.cpp  random.hpp  renderer.hpp  sc_game_over.cpp  sc_game_over.hpp  sc_gameplay.cpp  sc_gameplay.hpp  sc_start.cpp  sc_start.hpp  sdl_secure.hpp  settings.hpp  system_input.cpp  system_input.hpp  system_movement.cpp  system_movement.hpp  system_render.cpp  system_render.hpp  system_script.cpp  system_script.hpp  system_shooting.cpp  system_shooting.hpp  system_sound.cpp  system_sound.hpp  system_spawn.cpp  system_spawn.hpp  textures.hpp  timer.cpp  timer.hpp  vector.hpp
